correct spelling and re-align the navigation bar

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ li{
     background: linear-gradient(to right, rgb(156,242,208),rgb(109,184,247), rgb(97,58,124,1));
     background-size: 200% 200%;
     animation: rainbow 2s ease-in-out infinite;
-    background-clip: text;
+    /*background-clip: content-box;*/
     -webkit-background-clip:text;
     color:rgb(203, 210, 252);
     transition: color .2s ease-in-out;
@@ -85,6 +85,7 @@ li{
 /* NAVBAR MENU */
 .main_menu{
     display: flex;
+    margin-top: 30px;
     gap: 3em;
 }
 
@@ -133,6 +134,7 @@ li{
 }
 
 .sources {
+    margin-top: 30px;
     margin-right: 7%;
     margin-left: 1%;
 }
@@ -143,7 +145,7 @@ li{
     background: linear-gradient(to right, rgb(156,242,208),rgb(109,184,247), rgb(97,58,124,1));
     background-size: 200% 200%;
     animation: rainbow 2s ease-in-out infinite;
-    background-clip: text;
+    /*background-clip: content-box;*/
     -webkit-background-clip:text;
     transition: color .2s ease-in-out;
     font-size: 20px;
